Bug 153853 - Basic IDE line numbering column (and breakpoints column) position should not be flipped with RTL UI
Summary: Basic IDE line numbering column (and breakpoints column) position should not ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Rafael Lima
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: BASIC-IDE RTL-UI
  Show dependency treegraph
 
Reported: 2023-02-27 11:50 UTC by Eyal Rozenberg
Modified: 2024-01-28 02:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eyal Rozenberg 2023-02-27 11:50:41 UTC
When using RTL UI, the line numbers area of the window is to the right of the code editing area. However - the Basic code is (effectively) always LTR, regardless of the UI, and placing line numbers on the other side of the edit area doesn't help - they're close to the empty space, not the text.

So, I suggest the line numbers area be placed on the left of the code editing area, even in RTL UI. Alternatively, we could have liner numbers on _both_ sides (at least in RTL UI). Another option is to allow the user to control the choice of position.
Comment 1 Stéphane Guillou (stragu) 2023-03-14 14:05:53 UTC
Confirmed in:

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: he-IL
Calc: threaded

Already the case in 6.0.0.3

And in OOo 3.3, we didn't have line numbers but the breakpoint column was on the right all the same, so -> inherited.

Rafael, with your recent work on the BASIC IDE, wondering if you'd be interested.
Comment 2 Rafael Lima 2024-01-24 18:38:56 UTC
(In reply to Stéphane Guillou (stragu) from comment #1)
> Rafael, with your recent work on the BASIC IDE, wondering if you'd be
> interested.

Actually I could not reproduce the issue. I changed my locale to Hebrew and restarted LO. In Calc, the row numbers are to the right, but in the Basic IDE the line numbers are to the left.

Is there another way that I can reproduce this issue? Is the issue still present?

Tested with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: afe2ef3eb23f58ab9d25fe3e69e6709bbf4da136
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: he-IL (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 3 Stéphane Guillou (stragu) 2024-01-24 20:37:54 UTC
I can still reproduce, I tested with:

SAL_RTL_ENABLED=1 libreofficedev24.8 --writer

Then Tools > Macros > Edit macros. Numbers were to the right.

Can you try with that?

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6d71c21890c908225945f0fc3566255ed150f660
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
(tried with kf5 VCL plugin in 7.6, numbers are also to the right)
Comment 4 Rafael Lima 2024-01-24 21:45:40 UTC
(In reply to Stéphane Guillou (stragu) from comment #3)
> SAL_RTL_ENABLED=1 libreofficedev24.8 --writer

Thanks... I did not know about this flag. Now I can reproduce the issue.

The following patch fixes the issue for me:
https://gerrit.libreoffice.org/c/core/+/162540

Can you check if that fixes the issue on your machine as well?
Comment 5 Commit Notification 2024-01-26 16:06:29 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80480fb5ecc18a0a9b6c4cccc5cc35eba721f636

tdf#153853 Line numbering and breakpoint should be on the left (RTL)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2024-01-28 02:18:30 UTC
Thank you Rafael! Verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2cedb1a19ad605df4e148589e9027512e4dd9265
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And thanks Hossein for the review.