tdf#153853 Line numbering and breakpoint should be on the left (RTL)

As requested by the user in the ticket, the Line Numering and Breakpoint windows should be on the left side, even on RTL locales.

Change-Id: Iad2ba8efa0a23a13cf88c2fa277c4eed45002aae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162540
Tested-by: Jenkins
Reviewed-by: Hossein <hossein@libreoffice.org>